# hs-skel

./: .gitignore  Skel.hs  TODOs.txt  hs-skel.cabal
Control/Parallel/: HsSkel.hs
Control/Parallel/HsSkel/: DSL.hs  Exec.hs
src-test/: QuickCheck.hs
src/Control/Parallel/: HsSkel.hs
src/Control/Parallel/HsSkel/: DSL.hs  Examples.hs  Exec.hs
src/Control/Parallel/HsSkel/Exec/: Default.hs
src/Control/Parallel/HsSkel/Test/: QuickCheck.hs
