name:           hs-skel
version:        0.0.1
cabal-version:  >=1.20
build-type:     Simple
stability:      Experimental
author:         Mauro Blanco, Pablo Perdomo, Pablo Ezzatti, Alberto Pardo, Marcos Viera
synopsis:       
description:
    
tested-with:    GHC==7.8.3
maintainer:     Pablo Perdomo <pperdomo@fing.edu.uy>, Mauro Blanco <mblanco@fing.edu.uy>
category:       Parallel
license:        BSD3
license-file:   LICENSE
copyright:      Universidad de la República, Uruguay

library
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5, stm, deepseq, primes, random, tf-random
  ghc-options:      -Wall -fno-warn-orphans -fno-warn-name-shadowing
  default-Language: Haskell2010
  exposed-modules: 
                    Control.Parallel.HsSkel,
                    Control.Parallel.HsSkel.DSL,
                    Control.Parallel.HsSkel.Exec
                    Control.Parallel.HsSkel.Examples

