name:           hs-skel
version:        0.0.1
cabal-version:  >=1.20
build-type:     Simple
stability:      Experimental
author:         Mauro Blanco, Pablo Perdomo, Pablo Ezzatti, Alberto Pardo, Marcos Viera
synopsis:       
description:
    
tested-with:    GHC==7.8.3
maintainer:     Pablo Perdomo <pperdomo@fing.edu.uy>, Mauro Blanco <mblanco@fing.edu.uy>
category:       Parallel
license:        BSD3
license-file:   LICENSE
copyright:      Universidad de la República, Uruguay

library
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5, deepseq, random, tf-random, containers, unagi-chan
  ghc-options:      -Wall -fno-warn-orphans -fno-warn-name-shadowing
  default-Language: Haskell2010
  exposed-modules: 
                    Control.Parallel.HsSkel,
                    Control.Parallel.HsSkel.DSL,
                    Control.Parallel.HsSkel.Exec
                    Control.Parallel.HsSkel.Examples

test-suite test-hs-skel
  hs-source-dirs:   src-test
  build-depends:    base >= 4.7 && < 5, hs-skel, deepseq, vector, mtl, QuickCheck
  ghc-options:      -Wall -fno-warn-orphans -fno-warn-name-shadowing
  default-Language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          QuickCheck.hs
